--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,18 @@
 version: '3.7'
 
 services:
+  bertopic:
+    container_name: bertopic
+    build: .
+    command: bash -c 'while !</dev/tcp/minio/9000; do sleep 1; done; uvicorn service.main:app --host 0.0.0.0'
+    ports:
+      - 8008:8000
+    env_file:
+      ./.env
+    volumes:
+      - .:/app
+    depends_on:
+      - minio
   minio:
     container_name: minio
     hostname: minio
