--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,22 @@
 name: build
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+    - "**"
+  push:
+    branches:
+    - main
+
+env:
+  MINIO_URL: http://minio:9000
+  MINIO_ROOT_USER: ${{ secrets.MINIO_ROOT_USER }}
+  MINIO_ROOT_PASSWORD: ${{ secrets.MINIO_ROOT_PASSWORD }}
+  MINIO_REGION_NAME: berttopic
+  MINIO_BUCKET_NAME: default_bucket
+  MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
+  MINIO_SECRET_KEY: ${{ secrets.MINIO_SECRET_KEY }}
+  DOCKER_BUILDKIT: 1
 
 jobs:
   build:
