--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Run code checks
       run: |
-        make check-code
+        docker-compose run --rm --no-deps make check-code
 
     - name: Run integration tests
       run: |
