--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,25 +22,25 @@ repos:
         entry: poetry run flakehell lint
         types: [python]
 
-      - id: mypy
-        name: mypy
-        stages: [commit]
-        language: system
-        entry: poetry run mypy --config-file pyproject.toml
-        types: [python]
+      # - id: mypy
+      #   name: mypy
+      #   stages: [commit]
+      #   language: system
+      #   entry: poetry run mypy --config-file pyproject.toml
+      #   types: [python]
 
-      - id: pytest
-        name: pytest
-        stages: [commit]
-        language: system
-        entry: poetry run pytest
-        types: [python]
-        pass_filenames: false
+      # - id: pytest
+      #   name: pytest
+      #   stages: [commit]
+      #   language: system
+      #   entry: poetry run pytest
+      #   types: [python]
+      #   pass_filenames: false
 
-      - id: pytest-cov
-        name: pytest
-        stages: [push]
-        language: system
-        entry: poetry run pytest --cov ruts --cov-fail-under 80
-        types: [python]
-        pass_filenames: false
+      # - id: pytest-cov
+      #   name: pytest
+      #   stages: [push]
+      #   language: system
+      #   entry: poetry run pytest --cov ruts --cov-fail-under 80
+      #   types: [python]
+      #   pass_filenames: false
