Add db env variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,10 +13,17 @@ services:
       MINIO_BUCKET_NAME: default_bucket
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+      POSTGRES_HOST: db
+      POSTGRES_PORT: 5432
+      POSTGRES_DB: bertopic
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - .:/app
     depends_on:
       - minio
+      - db
+
   minio:
     container_name: minio
     hostname: minio
@@ -67,8 +74,10 @@ services:
     restart: always
     ports:
      - 5432:5432
-    env_file:
-      ./.env
+    environment:
+      POSTGRES_DB: bertopic
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
      - pg_data:/var/lib/postgresql/data
     
