--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,10 @@ jobs:
       run: |
         make build
 
+    - name: Show mc log
+      run: |
+        docker logs mc
+
     - name: Start services
       run: |
         make up
