--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ on:
     - main
 
 env:
+  OWNER: shkaolin
+  IMAGE_NAME: bertopic-as-service
   MINIO_URL: http://minio:9000
   MINIO_ROOT_USER: ${{ secrets.MINIO_ROOT_USER }}
   MINIO_ROOT_PASSWORD: ${{ secrets.MINIO_ROOT_PASSWORD }}
@@ -26,28 +28,35 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Log in to GitHub Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: false
+          tags: $OWNER/$IMAGE_NAME:latest
+          cache-from: type=registry,ref=$OWNER/$IMAGE_NAME:latest
 
-    - name: Setup python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-
-    - name: Build images
-      run: |
-        make build
-
-    - name: Start services
-      run: |
-        make up
-
-    - name: Run code checks
-      run: |
-        docker-compose run --rm --no-deps bertopic make check-code
-    - name: Run integration tests
-      run: |
-        make test
+  check:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Start services
+        run: |
+          make up
+      - name: Run code checks
+        run: |
+          docker-compose run --rm --no-deps bertopic make check-code
+      - name: Run integration tests
+        run: |
+          make test
