--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,6 @@ on:
     - main
 
 env:
-  OWNER: shkaolin
-  IMAGE_NAME: bertopic-as-service
   MINIO_URL: http://minio:9000
   MINIO_ROOT_USER: ${{ secrets.MINIO_ROOT_USER }}
   MINIO_ROOT_PASSWORD: ${{ secrets.MINIO_ROOT_PASSWORD }}
@@ -44,8 +42,8 @@ jobs:
         with:
           context: .
           push: false
-          tags: $OWNER/$IMAGE_NAME:latest
-          cache-from: type=registry,ref=$OWNER/$IMAGE_NAME:latest
+          tags: shkaolin/bertopic-as-service:latest
+          cache-from: type=registry,ref=shkaolin/bertopic-as-service:latest
 
   check:
     runs-on: ubuntu-latest
