--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ env:
   POSTGRES_DB: bertopic
   POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
   POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+  IMAGE_TAG: shkaolin/bertopic-as-service:latest
 
 jobs:
   build:
@@ -41,16 +42,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false
-          tags: shkaolin/bertopic-as-service:latest
-          cache-from: type=registry,ref=shkaolin/bertopic-as-service:latest
-
-  check:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+          load: true
+          tags: ${{ env.IMAGE_TAG }}
+          cache-from: type=gha
       - name: Start services
         run: |
           make up
