--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,10 +44,10 @@ jobs:
           docker pull ${{ env.REGISTRY }}/${{ env.IMAGE }} || true
       - name: Build
         run: |
-          docker buildx build -t ${{ env.IMAGE }} --cache-from ${{ env.REGISTRY }}/${{ env.IMAGE }} .
+          docker images
+          docker build -t ${{ env.IMAGE }} --cache-from ${{ env.REGISTRY }}/${{ env.IMAGE }} .
       - name: Start services
         run: |
-          docker images
           make up
       - name: Run code checks
         run: |
