--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,18 +39,22 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Pull
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+      - name: Build
         uses: docker/build-push-action@v2
         with:
           context: .
+          push: false
           load: true
           tags: ${{ env.IMAGE }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Start services
-        run: |
-          docker buildx bake
-          make up
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
       - name: Run code checks
         run: |
           docker-compose run --rm --no-deps bertopic make check-code
