--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} -p ${{ secrets.REGISTRY_PASS }}
-      - run: docker pull $REGISTRY/$IMAGE:latest || true
-      - run: docker build --cache-from=$REGISTRY/$IMAGE:latest,python:3.8.12-slim . -t thing
+      - run: docker pull $REGISTRY/$IMAGE:cache || true
+      - run: docker build --cache-from=$REGISTRY/$IMAGE:cache,python:3.8.12-slim . -t thing
       - run: docker tag thing $REGISTRY/$IMAGE:cache && docker push $REGISTRY/$IMAGE:cache || true
