--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} -p ${{ secrets.REGISTRY_PASS }}
-      - run: docker pull $REGISTRY/$IMAGE:cache || true
-      - run: docker build --cache-from=$REGISTRY/$IMAGE:cache,python:3.8.12-slim . -t thing
-      - run: docker tag thing $REGISTRY/$IMAGE:cache && docker push $REGISTRY/$IMAGE:cache || true
+      - uses: whoan/docker-build-with-cache-action@v5
+        with:
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_PASS }}
+          registry: $REGISTRY
+          image_name: $IMAGE:cache
+          push_image_and_stages: false
