--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,38 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: whoan/docker-build-with-cache-action@v5
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
+
+      - name: Get Date
+        id: get-date
+        run: |
+          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
+        shell: bash
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
         with:
-          username: ${{ secrets.REGISTRY_USER }}
-          password: "${{ secrets.REGISTRY_PASS }}"
-          registry: ghcr.io
-          image_name: shkaolin/bertopic-as-service:cache
-          push_image_and_stages: false
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ steps.get-date.outputs.date }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          push: false
+          load: true
+          tags: shkaolin/bertopic-as-service:cache
+          builder: ${{ steps.buildx.outputs.name }}
+          file: ./Dockerfile
+          context: .
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+
+      - name: Up
+        # run: DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose up --no-build --no-deps  --exit-code-from app app
+        run: docker-compose up --no-build
