--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,7 @@ version: '3.7'
 services:
   bertopic:
     container_name: bertopic
-    build:
-      context: .
-      cache_from:
-        - ghcr.io/shkaolin/bertopic-as-service:latest
-    image: ghcr.io/shkaolin/bertopic-as-service:latest
+    build: .
     command: bash -c 'while !</dev/tcp/minio/9000; do sleep 1; done; uvicorn service.main:app --host 0.0.0.0'
     ports:
       - 8008:8000
