--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   bertopic:
     container_name: bertopic
     build: .
-    command: bash -c 'while !</dev/tcp/minio/9000; do sleep 1; done; uvicorn service.main:app --host 0.0.0.0'
+    command: bash -c 'sleep 10000000'
     ports:
       - 8008:8000
     environment:
