--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,31 +37,24 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@master
 
-      - name: Get Date
-        id: get-date
-        run: |
-          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
-        shell: bash
-
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ steps.get-date.outputs.date }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
       - name: Build
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: false
           load: true
-          tags: ghcr.io/shkaolin/bertopic-as-service:latest
-          builder: ${{ steps.buildx.outputs.name }}
-          file: ./Dockerfile
-          context: .
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Up
-        # run: DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker-compose up --no-build --no-deps  --exit-code-from app app
-        run: docker-compose up -d --no-build
+      - name: Start services
+        run: |
+          docker-compose up -d --no-build
+
+      - name: Run code checks
+        run: |
+          docker-compose run --rm --no-deps bertopic make check-code
+
+      - name: Run integration tests
+        run: |
+          make test
