--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,14 +17,13 @@ env:
   MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
   MINIO_SECRET_KEY: ${{ secrets.MINIO_SECRET_KEY }}
   DOCKER_BUILDKIT: 1
-  COMPOSE_DOCKER_CLI_BUILD: 1
   POSTGRES_HOST: db
   POSTGRES_PORT: 5432
   POSTGRES_DB: bertopic
   POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
   POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
   REGISTRY: ghcr.io
-  IMAGE: shkaolin/bertopic-as-service
+  IMAGE_NAME: shkaolin/bertopic-as-service
 
 jobs:
   build:
@@ -37,13 +36,12 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@master
 
-      - name: Build
+      - name: Build and export to Docker
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false
           load: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE }}:latest
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -58,3 +56,17 @@ jobs:
       - name: Run integration tests
         run: |
           make test
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
