--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,7 @@ jobs:
           make test
 
       - name: Login to GitHub Container Registry
+        if: ${{ github.event_name == 'push' }}
         uses: docker/login-action@v1 
         with:
           registry: ${{ env.REGISTRY }}
@@ -65,6 +66,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
+        if: ${{ github.event_name == 'push' }}
         uses: docker/build-push-action@v2
         with:
           context: .
