Build cache support (#8)
* First draft

* Fix #1

* Fix #2

* Fix #3

* Fix #4

* Fix #5

* Fix #6

* Fix #7

* Fix #8

* Fix #9

* Fix #10

* Fix #11

* Fix #12

* Fix #13

* Fix #14

* Fix #15

* Fix #16

* Fix #17

* Fix #18

* Fix #19

* Show docker version

* Test build-push-action remote

* Fix #20

* Fix #21

* Fix #22

* Fix #23

* Fix #24

* Fix #25

* Fix #26

* Fix #27

* Fix #28

* Fix #29

* Fix #30

* Final draft

* Implemented poetry caching

* Dropped package installation

* Fix #31

Co-authored-by: Alexey Vatolin <vatolinalex@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,11 @@ version: '3.7'
 services:
   bertopic:
     container_name: bertopic
-    build: .
-    command: bash -c 'while !</dev/tcp/minio/9000; do sleep 1; done; uvicorn service.main:app --host 0.0.0.0'
+    image: ghcr.io/shkaolin/bertopic-as-service:latest
+    command: >
+      bash -c "
+      while !</dev/tcp/minio/9000; do echo 'Wait minio to startup...' && sleep 1; done;
+      uvicorn service.main:app --host 0.0.0.0"
     ports:
       - 8008:8000
     environment:
@@ -49,6 +52,7 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+
   mc:
     container_name: mc
     image: quay.io/minio/mc
