--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,32 +22,53 @@ env:
   POSTGRES_DB: bertopic
   POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
   POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+  REGISTRY: ghcr.io
+  IMAGE_NAME: shkaolin/bertopic-as-service
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Setup python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
 
-    - name: Build images
-      run: |
-        make build
+      - name: Build and export to Docker
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          load: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-    - name: Start services
-      run: |
-        make up
+      - name: Start services
+        run: |
+          docker-compose up -d --no-build
 
-    - name: Run code checks
-      run: |
-        docker-compose run --rm --no-deps bertopic make check-code
-    - name: Run integration tests
-      run: |
-        make test
+      - name: Run code checks
+        run: |
+          docker-compose run --rm --no-deps bertopic make check-code
+
+      - name: Run integration tests
+        run: |
+          make test
+
+      - name: Login to GitHub Container Registry
+        if: ${{ github.event_name == 'push' }}
+        uses: docker/login-action@v1 
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push
+        if: ${{ github.event_name == 'push' }}
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
