--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,8 @@ version: '3.7'
 services:
   bertopic:
     container_name: bertopic
-    image: ghcr.io/shkaolin/bertopic-as-service:latest
+    image: bertopic-as-service:latest
+    build: .
     command: >
       bash -c "
       while !</dev/tcp/minio/9000; do echo 'Wait minio to startup...' && sleep 1; done;
