--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
 
   notification:
     runs-on: ubuntu-latest
-    needs: build_docker
+    needs: build
     steps:
       - name: Send telegram message on PR
         if: ${{ github.event_name == 'pull_request' }}
