--- a/.github/workflows/pr-notification.yml
+++ b/.github/workflows/pr-notification.yml
@@ -18,7 +18,7 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: markdown
           message: |
-            :sparkles: *${{ github.actor }}* created PR [#${{ github.event.pull_request.number }}](https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}):
+            ✨ *${{ github.actor }}* created PR [#${{ github.event.pull_request.number }}](https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}):
 
             *Title*: ${{ github.event.pull_request.title }}
 
@@ -36,7 +36,7 @@ jobs:
           photo: 'https://tenor.com/r1mn.gif'
           sticker: 'https://tenor.com/view/kung-fu-fighting-punch-choy-li-fut-mma-gif-18262064'
           message: |
-            :pencil: *${{ github.actor }}* updated PR [#${{ github.event.pull_request.number }}](https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}):
+            ✏️ *${{ github.actor }}* updated PR [#${{ github.event.pull_request.number }}](https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}):
 
             *Title*: ${{ github.event.pull_request.title }}
 
@@ -51,10 +51,8 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: markdown
-          photo: 'https://tenor.com/r1mn.gif'
-          sticker: 'https://tenor.com/view/kung-fu-fighting-punch-choy-li-fut-mma-gif-18262064'
           message: |
-            :pencil: PR [#${{ github.event.pull_request.number }}](https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}) is ready for review:
+            ✅ PR [#${{ github.event.pull_request.number }}](https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}) is ready for review:
 
             *Title*: ${{ github.event.pull_request.title }}
 
