--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,10 +59,6 @@ jobs:
           docker tag bertopic-as-service:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
-  notification:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Send telegram message on merging to master
         if: ${{ github.event_name == 'push' }}
         uses: appleboy/telegram-action@master
@@ -71,7 +67,7 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: markdown
           message: |
-            🎉 master brach was updated, congratulations!
+            🎉 master brach is updated, congratulations!
 
             *Repository*: ${{ github.repository }}
             
