--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,3 +58,17 @@ jobs:
         run: |
           docker tag bertopic-as-service:latest ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
+      - name: Send telegram message on merging to master
+        if: ${{ github.event_name == 'push' }}
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          format: markdown
+          message: |
+            🎉 master brach is updated, congratulations!
+
+            *Repository*: ${{ github.repository }}
+            
+            *See changes*: https://github.com/${{ github.repository }}/commit/${{github.sha}}
