--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,13 +29,13 @@ repos:
         entry: poetry run mypy --config-file pyproject.toml
         types: [python]
 
-      # - id: pytest
-      #   name: pytest
-      #   stages: [commit]
-      #   language: system
-      #   entry: poetry run pytest
-      #   types: [python]
-      #   pass_filenames: false
+      - id: pytest
+        name: pytest
+        stages: [commit]
+        language: system
+        entry: poetry run pytest -m unit
+        types: [python]
+        pass_filenames: false
 
       # - id: pytest-cov
       #   name: pytest
