--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-bertopic = "0.9.3"
+bertopic = "0.9.4"
 fastapi = "*"
 gunicorn = "*"
 uvicorn = "*"
@@ -41,6 +41,7 @@ pep8-naming = "*"
 flake8-bugbear = "*"
 flake8-builtins = "*"
 flakehell = "^0.9.0"
+pytest-mock = "^3.6.1"
 
 [tool.black]
 target-version = ["py38"]
