--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ sqlmodel = "^0.0.4"
 psycopg2-binary = "^2.9.1"
 asyncpg = "^0.24.0"
 alembic = "^1.7.5"
+numpy = "<1.21"
 
 [tool.poetry.dev-dependencies]
 black = "*"
